// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlWidget renders an URL view widget component 1`] = `
<a
  className="external metadata url widget"
  href="http://foobar.com"
  rel="noopener noreferrer"
  target="_blank"
  title={null}
>
  http://foobar.com
</a>
`;

exports[`UrlWidget renders an URL view widget component with children 1`] = `
<a
  className="external metadata url widget"
  href="http://foobar.com"
  rel="noopener noreferrer"
  target="_blank"
  title={null}
>
  <strong>
    http://foobar.com
  </strong>
</a>
`;

exports[`UrlWidget renders an empty URL view widget component 1`] = `null`;
